; ModuleID = '/home/carl/AnghaBench/linux/drivers/i3c/extr_master.c_i2c_scl_frequency_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i3c/extr_master.c_i2c_scl_frequency_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.i3c_bus = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"%ld\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @i2c_scl_frequency_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_scl_frequency_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.i3c_bus*, align 8
  %8 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.i3c_bus* @dev_to_i3cbus(%struct.device* %9)
  store %struct.i3c_bus* %10, %struct.i3c_bus** %7, align 8
  %11 = load %struct.i3c_bus*, %struct.i3c_bus** %7, align 8
  %12 = call i32 @i3c_bus_normaluse_lock(%struct.i3c_bus* %11)
  %13 = load i8*, i8** %6, align 8
  %14 = load %struct.i3c_bus*, %struct.i3c_bus** %7, align 8
  %15 = getelementptr inbounds %struct.i3c_bus, %struct.i3c_bus* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @sprintf(i8* %13, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %17)
  store i32 %18, i32* %8, align 4
  %19 = load %struct.i3c_bus*, %struct.i3c_bus** %7, align 8
  %20 = call i32 @i3c_bus_normaluse_unlock(%struct.i3c_bus* %19)
  %21 = load i32, i32* %8, align 4
  ret i32 %21
}

declare dso_local %struct.i3c_bus* @dev_to_i3cbus(%struct.device*) #1

declare dso_local i32 @i3c_bus_normaluse_lock(%struct.i3c_bus*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @i3c_bus_normaluse_unlock(%struct.i3c_bus*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
